Courtney Cavin - Sat Jan 22 2005
	.jpeg; .pnm; and .xcf extentions now open
	fixed about, the scrolling was a little funky/incorrect

Cameron Nishiyama - Sat Jan 22 2005
	image viewer scaling and zooming added
	image extentions are no longer case sensitive

Scott Lawrence - Sat Jan 22 2005
	added PodDraw, an etch-a-sketch simulation

Courtney Cavin - Wed Jan 12 2005
	PZ_VER is now date compiled +CVS by default

Jeffrey Nelson - Wed Jan 12 2005
	added Tic-Tac-Toe

Courtney Cavin - Mon Jan 3 2005
	paths to mp3s are now absolute

Fredrik Bergholtz - Mon Jan 3 2005
	asteroids are now lethal, and you only have five ships.
	destroying asteroids gives you a score relative to the asteroid size.

leachbj - Sat Dec 18 2004
	added hold switch feedback

jolan - Fri Dec 17 2004
	added visual feedback for volume setting in mp3 playback
	added progress bar for mp3 playback

Fredrik Bergholtz - Sun Dec 12 2004
	added beta Asteroids clone (Steroids)

Courtney Cavin - Mon Dec 6 2004
	added about page
	-Wall fixes

Courtney Cavin - Tue Nov 23 2004
	inverted color - the right way around

leachbj - Sat Nov  6 2004
	implemented integrated mp3 playback
	implemented non-threaded version of audio recording & playback
	fixed settings reset to ensure that the contrast is not set to 0
	load settings now loads load contrast setting correctly
	made reset settings return to parent menu

Courtney Cavin - Sun Oct 24 2004
	calculator now uses inverse text for current selection
	calendar no longer redraws entire screen on selection change
	fix for december 31 to jan 31 bug

Courtney Cavin - Wed Oct 20 2004
	added calculator

Jens Taprogge - Fri July 27 2004
	lots of improvements around the new iTunesDB browser. Including
	playlist support (just the normal ones so far). Depends on libitunesdb
	V0.5 (http://shamrock.dyndns.org/~ln/ipod/libitunesdb_0.5.tar.gz ).

Jens Taprogge - Fri July 16 2004
	added a new iTunesDB browser written from scratch. It provides